--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Logs
 logs
+hosting.YmV0YXB1YmxpYw.cache
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -9,7 +10,7 @@ firebase-debug.*.log*
 
 # Firebase cache
 .firebase/
-
+hosting.YmV0YXB1YmxpYw.cache
 # Firebase config
 
 # Uncomment this if you'd like others to create their own Firebase project.
@@ -67,3 +68,4 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+.firebase/hosting.YmV0YXB1YmxpYw.cache
